Changed default env, domain to renders. Enabled cors.